--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "axios": "^0.16.2",
+        "axios": ">=0.18.1",
         "google-maps-react": "^1.1.2",
         "lodash": "^4.17.11",
         "material-design-icons": "^3.0.1",
@@ -44,6 +44,7 @@
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "jest": "^23.6.0",
+        "querystringify": ">=2.0.0",
         "react-test-renderer": "^16.6.0"
     },
     "browserslist": [
