--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,14 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+src/config.js
+
 
 npm-debug.log*
 yarn-debug.log*
